--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -14,35 +14,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout repository
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      # 2. Prepare environment
       - name: Prepare environment
         run: |
           sudo apt-get update
           sudo apt-get install -y curl
 
+      # 3. Ensure merge.sh is executable
       - name: Ensure merge.sh is executable
         run: chmod +x ./merge.sh
 
+      # 4. Run merge script
       - name: Run merge script
         run: ./merge.sh
 
-      - name: Commit and push changes using PAT
+      # 5. Commit and push changes using GITHUB_TOKEN
+      - name: Commit and push changes
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
           git add consolidated_blocklist.txt || true
 
-          # Only commit if changes exist
+          # Commit only if there are changes
           if ! git diff --cached --quiet; then
             git commit -m "Nightly blocklist update $(date -u)"
-            # Update origin remote to include PAT for authentication
-            git remote set-url origin https://$GH_PAT@github.com/${{ github.repository }}.git
-            git push
+            # Push using HTTPS with the built-in token
+            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
           else
             echo "No changes to commit."
           fi
